home layout change, replace bootstrap slider with customized slider from stracth,responsive homepage

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,15 @@
-<div class="container-fluid">
+<!--<div class="container-fluid">
   <div class="row carousel-container">
     <div class="col-12">
       <div id="demo" class="carousel slide" data-ride="carousel">
 
-        <!-- Indicators -->
         <ul class="carousel-indicators">
           <li data-target="#demo" data-slide-to="0" class="active"></li>
           <li data-target="#demo" data-slide-to="1"></li>
           <li data-target="#demo" data-slide-to="2"></li>
         </ul>
         
-        <!-- The slideshow -->
+       
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class='flexed-element-container'>
@@ -68,7 +67,7 @@
           </div>
         </div>
         
-        <!-- Left and right controls -->
+        
         <a class="carousel-control-prev" href="#demo" data-slide="prev">
           <span class="carousel-control-prev-icon"></span>
         </a>
@@ -77,6 +76,67 @@
         </a>
       </div>
     
+    </div>
+  </div>
+</div>-->
+
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12">
+      <div class="outer">
+        <div class="inner">
+
+          <div class='flexed-element-container'>
+            <div class="text col-12 col-md-6">
+              <h3><small>Welcome to Chatapp</small></h3>
+              <p class='justify-center'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est maiores alias quas sequi facilis tempore deleniti ipsam omnis recusandae veniam obcaecati soluta, blanditiis cupiditate sint sit optio quae? Neque, ducimus.</p>
+              <div class="btn btn-dark">Enter chat room</div>
+            </div>
+
+            <div class="pic col-12 col-md-6">
+              <img src="..\..\assets\undraw_friends_online_klj6.png" alt="">
+            </div>
+          </div>
+
+          <div class='flexed-element-container'>
+            <div class="text col-12 order-md-2 col-md-6">
+              <h3><small>Find Someone who has the same interest as you</small></h3>
+              <p class='justify-center'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est maiores alias quas sequi facilis tempore deleniti ipsam omnis recusandae veniam obcaecati soluta, blanditiis cupiditate sint sit optio quae? Neque, ducimus.</p>
+            </div>
+           
+            <div class="pic col-12 order-md-1 col-md-6">
+              <img src="..\..\assets\undraw_shared_goals_3d12.png" alt="representation of two people having same interest ">
+            </div>
+           </div>
+
+           <div class='flexed-element-container'>
+            <div class="text col-12 col-md-6">
+              <h3><small>Chat with strangers or friends online</small></h3>
+              <p class='justify-center'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est maiores alias quas sequi facilis tempore deleniti ipsam omnis recusandae veniam obcaecati soluta, blanditiis cupiditate sint sit optio quae? Neque, ducimus.</p>
+            </div>
+
+            <div class="pic col-12 col-md-6">
+             <img src=" ..\..\assets\undraw_online_connection_6778.png" alt="representation of two people having online conversation ">
+            </div>
+           </div>
+           
+           <div class='flexed-element-container'>
+            <div class="text col-12 order-md-2 col-md-6">
+              <h3><small>Register to Start conversations</small></h3>
+              <p class='justify-center'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est maiores alias quas sequi facilis tempore deleniti ipsam omnis recusandae veniam obcaecati soluta, blanditiis cupiditate sint sit optio quae? Neque, ducimus.</p>
+              <div class="btn border-success px-4 mr-2" routerLink='/login'> login </div>
+               <div class="btn btn-dark px-3" routerLink='/sign-up'> Sign up</div>
+            </div>
+
+            <div class="pic col-12 order-md-1 col-md-6">
+             <img src=" ..\..\assets\undraw_ideas_s70l.png" id='piclast' alt="representation of human thinking">
+            </div>
+           </div>
+         
+
+        </div>
+      </div>
     </div>
   </div>
 </div>
