--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,9 +1,14 @@
+/*{
+    box-sizing: border-box;
+}
 .container-fluid {
     height:100%;
+    
 }
 .carousel-container{
-    height:100% !important;
+    height:100%;
     overflow-x: hidden;
+    
     
 }
 
@@ -12,7 +17,8 @@
 }
 
 .carousel-item .flexed-element-container{
-      height:81vh;
+     
+      height:80vh;
       width:100%;
       display:flex;
       flex-direction:row;
@@ -29,4 +35,141 @@
 .carousel-item .flexed-element-container .pic img{
      width:100%;
      
+}
+*/
+
+
+.container-fluid {
+    height:100%;
+    padding:0px;
+    overflow-x: hidden;
+    
+}
+
+.row{
+    height:100% !important;
+    padding:0px;
+}
+
+.outer {
+    width:100%;
+    height:100%;
+    margin:0;
+    background:whitesmoke;
+    position:relative;
+    overflow:hidden;
+   
+}
+
+.inner{
+    box-sizing:border-box;
+    height:100%;
+    width:400%;
+    padding:10px 0px;
+    display:flex;
+    position:absolute;
+    animation: slider 40s infinite;
+}
+
+@keyframes slider{
+    0% {
+        left:0;
+    }
+    25%{
+        left:0%;
+    }
+    26%{
+        left:-100%;
+    }
+    
+    50%{
+        left:-100%;
+    }
+    51%{
+        left:-200%;
+    }
+    75%{
+        left:-200%;
+    } 
+    76%{
+        left:-300%;
+    }
+    100%{
+       left:-300%;
+    }
+}
+
+.inner .flexed-element-container{
+    height:100%;
+    width:100%;
+    display:flex;
+    flex-direction:row;
+    align-items: center;
+ }
+
+ .inner .flexed-element-container .text{
+    padding:0px 20px !important;
+}
+.inner .flexed-element-container .pic{
+    height:100%;
+    width:100%;
+    display:flex;
+    align-items: center;
+}
+.inner .flexed-element-container .pic img{
+     width:100%;
+     
+}
+
+#piclast{
+    width:90%;
+}
+
+@media screen and (max-width:700px){
+.outer{
+    overflow: scroll;
+}
+
+.inner{
+    display:flex;
+    width:100%;
+    flex-direction:row;
+    animation:none;
+    flex-wrap:wrap;
+    
+}
+
+.inner .flexed-element-container{
+    display:flex;
+    flex-wrap: wrap;
+    height:100%;
+    width:100%;
+    flex-direction:row;
+    box-sizing: border-box;
+   
+ }
+
+ .inner .flexed-element-container .text{
+    padding:0px 20px !important;
+    height:40%;
+    order:2;
+}
+
+.inner .flexed-element-container .pic{
+    display:block;
+    width:100%;
+    height:40%;
+    order:1;
+    padding:0px;
+}
+.inner .flexed-element-container .pic img{
+     width:100%;
+     height:100%;
+     
+}
+
+#piclast{
+    width:100%;
+}
+
 }
