--- a/src/app/normalpages/normalpages.component.html
+++ b/src/app/normalpages/normalpages.component.html
@@ -4,4 +4,6 @@
     <router-outlet></router-outlet>
 </div>
 
-<app-footer></app-footer>
+<div class="footer">
+    <app-footer></app-footer>
+</div>
