connection to backend, authGuard, dataService

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
             <div class="text">
                 <span class='badge badge-pill badge-pill-small bg-success'>&nbsp;</span><i>meet stranges online</i>
             </div>
-            <div class="btn toggle-btn" (click)="showsidenav()">=</div>
+            <div class="btn toggle-btn nav-show-btn" (click)="showsidenav()">=</div>
         </div>
     </div>
 </div>
