--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
         <div class="col-md-6 login-box">
             <div class="login-form-container">
                 <h2 class='text-center'><small>Login Please!</small></h2>
-                <form #loginform="ngForm" class='form' (ngSubmit)='onLogin(loginform.value)'>
+                <form #loginform="ngForm" class='form' (ngSubmit)='onLogin()'>
     
                     <div class="form-group">
                         <label for="email" class='form-label'></label>
