--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -125,9 +125,9 @@
     width:90%;
 }
 
-@media screen and (max-width:700px){
+@media screen and (max-width:600px){
 .outer{
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .inner{
@@ -145,20 +145,21 @@
     height:100%;
     width:100%;
     flex-direction:row;
+    justify-content: flex-start;
     box-sizing: border-box;
    
  }
 
  .inner .flexed-element-container .text{
     padding:0px 20px !important;
-    height:40%;
+    height:45%;
     order:2;
 }
 
 .inner .flexed-element-container .pic{
     display:block;
     width:100%;
-    height:40%;
+    height:35%;
     order:1;
     padding:0px;
 }
