--- a/src/app/normalpages/normalpages.component.css
+++ b/src/app/normalpages/normalpages.component.css
@@ -5,9 +5,18 @@
 }
 
 
-@media screen and (max-width:700px){
+@media screen and (max-width:600px){
+   
     .normal-pages-main-screen{
         min-height:90vh;
+    }
+    .footer{
+        background:white;
+        display:block;
+        width:100%;
+        position:fixed;
+        bottom:0;
+        z-index:1000;
     }
 
 }
