--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,8 +1,33 @@
-<div class="container-md-fluid container">
+<div class="container">
     <div class="row">
-        <div class="col-12">
+        <div class="col-12 mt-5">
             
+            <div class="profile-container">
+               <div class="profile-pic">
+                   <img src="../../assets/undraw_friends_online_klj6.png" alt="">
+                   <input type="file" name="propic" id="propic">
+                   <div class='blur-bg'>
+                    <div class="btn" id='profilepicuploader'>+</div>
+                   </div>
+                   
+               </div>
+               <div class="details">
+                   <form action="">
+                       <div class="form-group">
+                           <label for="fullname" class='form-label'> <input type="text" class='form-control' name='fullname' value="Deepak Sharma" Disabled></label>
+                       </div>
+                       
+                       <div class="form-group">
+                        <label for="email" class='form-label'> <input type="text" class='form-control' name='fullname' value="DeepakSharma@gmail.com" Disabled></label>
+                       </div>
 
+                       <div class="form-group">
+                        <label for="pasword" class='form-label'> <input type="password" class='form-control' name='fullname' value="Deepak Sharma" Disabled> </label>
+                       </div>
+                   </form>
+               </div>
+            </div>
+ 
         </div>
     </div>
 </div>
