--- a/src/app/secondheader/secondheader.component.html
+++ b/src/app/secondheader/secondheader.component.html
@@ -10,8 +10,8 @@
                 </div>
                 
                 <div>
-                    <li class='nav-item' routerLink='/login'>Login</li>
-                    <li class='nav-item' routerLink='/sign-up'>Sign up</li>
+                    <li *ngIf="!loginsignupshowhide" class='nav-item' routerLink='/login'>Login</li>
+                    <li *ngIf="!loginsignupshowhide" class='nav-item' routerLink='/sign-up'>Sign up</li>
                 </div>
             </ul>
         </div>
