worked on overall responsiveness of the pages for mobile devices

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,3 +4,12 @@
 
 }
 
+@media screen and (max-width:600px){
+      
+    .main-screen{
+        height:unset;
+        min-height:90vh;
+    }
+ 
+}
+
