--- a/src/app/chatzonesidenav/chatzonesidenav.component.html
+++ b/src/app/chatzonesidenav/chatzonesidenav.component.html
@@ -4,7 +4,7 @@
             <ul class='navigaton-links-container'>
                 <li class="flex-item" routerLink='profile' ><i class="fa fa-user" aria-hidden="true"></i> <p class='show-hide-text'>Profile</p> </li>
                 <li class="flex-item" routerLink='chat'><i class="fa fa-comments" aria-hidden="true"></i> <p class='show-hide-text'>Chat</p> </li>
-                <li class="flex-item" routerLink=''><i class="fa fa-sign-out" aria-hidden="true"></i><p class='show-hide-text'>Logout</p></li>
+                <li class="flex-item" (click)='logout()'><i class="fa fa-sign-out" aria-hidden="true"></i><p class='show-hide-text'>Logout</p></li>
             </ul>    
         </div>
     </div>
