--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -54,8 +54,7 @@
     position:absolute;
     top:0%;
     left:0%;
-    opacity: 0.3;
-    background:black;
+    background:rgba(0,0,0,0.3);
 }
 #profilepicuploader{
     position:absolute;
