--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,6 +3,7 @@
         <div class="col-12 mt-5">
             
             <div class="profile-container">
+                <!-- profile pic -->
                <div class="profile-pic">
                    <img src="../../assets/undraw_friends_online_klj6.png" alt="">
                    <input type="file" name="propic" id="propic">
@@ -11,6 +12,9 @@
                    </div>
                    
                </div>
+               <!-- end profile pic -->
+
+               <!--details-->
                <div class="details">
                    <form action="">
                        <div class="form-group">
@@ -24,8 +28,19 @@
                        <div class="form-group">
                         <label for="pasword" class='form-label'> <input type="password" class='form-control' name='fullname' value="Deepak Sharma" Disabled> </label>
                        </div>
+
+                       <div class="form-group">
+                        <select name="gender" id="" class='form-control'>
+                            <option value="">Select Gender</option>
+                            <option value="Male">Male</option>
+                            <option value="Female">Female</option>
+                            <option value="No">Hide Gender</option>
+                        </select>
+                       </div>
                    </form>
                </div>
+               <!--end details -->
+
             </div>
  
         </div>
