--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -33,6 +33,13 @@
 
 
 @media screen and (max-width:600px){
+    
+    .top-header{
+        position:fixed;
+        top:0;
+        z-index:1111;
+    }
+    
     .toggle-btn{
        display:block;
     }
@@ -55,6 +62,10 @@
     }
     .second-header ul div li:hover{
         background:green;
+    }
+
+    .text {
+        display:none;
     }
 
 }
