--- a/src/app/normalpages/normalpages.component.css
+++ b/src/app/normalpages/normalpages.component.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+    overflow-x:hidden;
+}
 .normal-pages-main-screen{
     width:100%;
     height:80vh;
@@ -8,15 +12,15 @@
 @media screen and (max-width:600px){
    
     .normal-pages-main-screen{
+        height:unset;
         min-height:90vh;
     }
     .footer{
         background:white;
         display:block;
         width:100%;
-        position:fixed;
-        bottom:0;
-        z-index:1000;
+        
+       
     }
 
 }
