--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -19,7 +19,7 @@
                         <span *ngIf="password.invalid && password.touched" class='error'> *Please enter password between 8 to 15 characters</span>
                     </div>
                 
-                   <button type='submit' [disabled]='loginform.invalid' class='btn btn-dark text-white py-md-2 px-lg-5 px-2'>Login</button>
+                   <button type='submit' [disabled]='loginform.invalid' class='btn btn-dark text-white mt-3 py-md-2 px-lg-5 px-4'>Login</button>
                 </form>
             </div>
         </div>
