added message box, ui fixes , fetching data from server for profile pic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<app-header></app-header>
-<div class='main-screen'>
-    <router-outlet></router-outlet>
-</div>
+
+     <div class="header">
+     <app-header></app-header>
+     </div>
+     <div class='main-screen'>
+         <router-outlet></router-outlet>
+     </div>
+
