--- a/src/app/chatzone/chatzone.component.html
+++ b/src/app/chatzone/chatzone.component.html
@@ -1,4 +1,6 @@
-<app-chatzonesidenav></app-chatzonesidenav>
+<div class="chatzonesidenav">
+    <app-chatzonesidenav></app-chatzonesidenav>
+</div>
 
 <div class="main">
     <router-outlet></router-outlet>
