--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
         <div class="col-12 top-header py-1 bg-light text-dark">
             <div class="logo"><h3><small>Chating App</small></h3></div>
             <div class="text">
-                <span class='badge badge-pill badge-pill-small bg-success'>&nbsp;</span><i>meet stranges online</i>
+                <span class='badge badge-pill mt-1 badge-pill-small bg-success'>&nbsp;</span><i>meet stranges online</i>
             </div>
             <div class="btn toggle-btn nav-show-btn" (click)="showsidenav()">=</div>
         </div>
