--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,9 +1,10 @@
 <div class="container">
     <div class="row">
-        <div class="col-12 mt-5">
-            
+        <div class="col-12 mt-3">
+            <h2 class='text-center mb-3'><small>Edit Your Profile</small></h2>
+            <hr>
             <div class="profile-container">
-                <h2 class='text-center mb-3'><small>Your Profile</small></h2>
+               
                     
                 <!-- profile pic -->
                <div class="profile-pic">
@@ -12,7 +13,6 @@
                    <div class='blur-bg'>
                     <div class="btn" id='profilepicuploader'>+</div>
                    </div>
-                   
                </div>
                <!-- end profile pic -->
 
@@ -28,7 +28,7 @@
                        </div>
 
                        <div class="form-group">
-                        <label for="pasword" class='form-label'> <input type="password" class='form-control' name='fullname' [value]="password" Disabled> </label>
+                        <label for="pasword" class='form-label'> <input type="password" class='form-control' name='fullname' [value]="password"> </label>
                        </div>
                        
                         <div class="form-group">
