--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,13 @@
-.main-screen {
-    width:100vw;
-    height:90vh;
-    overflow-y: hidden;
-    overflow-x: hidden;
 
+*{
+    box-sizing:border-box;
+}
+
+.main-screen {
+    width:100%;
+    height:92vh;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 @media screen and (max-width:600px){
