--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -2,9 +2,11 @@
     box-sizing: border-box;
     padding:0;
     overflow-x: hidden;
+
 }
 
 .row{
+  
     display:flex;
     height:100%;
     flex-direction: column;
@@ -14,16 +16,16 @@
     display:flex;
     flex-direction:column;
     justify-content: center;
-    align-items: center;
+    align-items:center;
 }
 
 .profile-pic{
-    width:200px;
-    height:200px;
+    width:150px;
+    height:150px;
     border-radius: 50%;
     overflow:hidden;
-    border:1px solid grey;
     position: relative;
+
 }
 
 .profile-pic img{
@@ -33,7 +35,7 @@
 }
 .details{
  width:50%;
- margin-left:10px;
+ margin-left:20px;
  margin-top:20px;
 }
 .form-group{
@@ -97,6 +99,7 @@ option {
     .profile-pic{
         width:180px;
         height:180px;
+        align-self: center;
     }
     textarea{
         text-align:justify;
