--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -18,7 +18,9 @@
     justify-content: center;
     align-items:center;
 }
-
+input[type='file']{
+    visibility:hidden;
+}
 .profile-pic{
     width:150px;
     height:150px;
