--- a/src/app/messagearea/messagearea.component.html
+++ b/src/app/messagearea/messagearea.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="chat-partner-name">
           <span class="status online"></span>
-          <a target="_blank" href="https://www.facebook.com/mfreak">Murray</a>
+          <a target="_blank" href="https://www.facebook.com/mfreak"> Mamun Khandakery</a>
         </div>
         <div class="chatbox-icons">
           <!--<a href="javascript:void(0);"><i class="fa fa-minus"></i></a>-->
@@ -27,10 +27,10 @@
         
         <div class="message-box-holder">
           <div class="message-sender">
-             Girlfriend &lt;3
+            Mamun Khandaker
            </div>
           <div class="message-box message-partner">
-            Hi love
+            Hi 
           </div>
         </div>
         
