work on profile page getting more information from login and signup

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -9,7 +9,16 @@
                 <!-- profile pic -->
                <div class="profile-pic">
                    <img [src]="proPic_src" alt="">
-                   <input type="file" name="propic" id="propic" accept="image/*" #imageFile (change)="fileSelectAndUpload($event)">
+
+                   <input 
+                      type="file" 
+                      name="propic" 
+                      id="propic" 
+                      accept="image/*" 
+                      #imageFile
+                      (change)="fileSelectAndUpload($event)"
+                    >
+                      
                    <div class='blur-bg'>
                     <div class="btn" id='profilepicuploader' (click)="imageFile.click()">+</div>
                    </div>
@@ -20,33 +29,33 @@
                <div class="details">
                    <form action="">
                        <div class="form-group">
-                           <label for="fullname" class='form-label'> <input type="text" class='form-control' name='fullname' [value]="FullName"></label>
+                           <label for="fullname" class='form-label'> <input type="text" class='form-control' name='fullName' [(ngModel)]="FullName"></label>
                        </div>
                        
                        <div class="form-group">
-                        <label for="email" class='form-label'> <input type="text" class='form-control' name='fullname' [value]="email" Disabled></label>
+                        <label for="email" class='form-label'> <input type="text" class='form-control' name='email' [value]="email" Disabled></label>
                        </div>
 
                        <div class="form-group">
-                        <label for="pasword" class='form-label'> <input type="password" class='form-control' name='fullname' [value]="password"> </label>
+                        <label for="pasword" class='form-label'> <input type="password" class='form-control' name='password' [(ngModel)]="password"> </label>
                        </div>
                        
                         <div class="form-group">
-                            <label for="about" class='form-label'><textarea name="about" id="about" cols="30" rows="3" class='form-control' [value]="about"></textarea></label>
+                            <label for="about" class='form-label'><textarea name="about" id="about" cols="30" rows="3" class='form-control' [(ngModel)]="about"></textarea></label>
                         </div>
 
                        <div class="form-group">
-                        <select name="gender" id="" class='form-control'>
-                            <option value="">Select Gender</option>
-                            <option value="Male">Male</option>
-                            <option value="Female">Female</option>
-                            <option value="No">Hide Gender</option>
+                        <select name="gender"  (change)="changeGender($event)" class='form-control'>
+                            <option value="" [selected]="(gender=='')">Select Gender</option>
+                            <option value="male" [selected]="(gender=='male')">Male</option>
+                            <option value="female" [selected]="(gender=='female')">Female</option>
+                            <option value="no" [selected]="(gender=='no')">Hide Gender</option>
                         </select>
                        </div>
                    </form>
                    <div class="buttons text-center mb-5">
-                    <div class="btn border-danger py-2 px-3 mt-3">cancel</div>
-                    <div class="btn btn-primary py-2 px-4 ml-2 mt-3">Save</div>
+                    <div class="btn border-danger py-2 px-3 mt-3" (click)="cancelChanges()">cancel</div>
+                    <div class="btn btn-primary py-2 px-4 ml-2 mt-3" (click)="savedetails()">Save</div>
                    </div>
 
                </div>
