--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-12 mt-3">
+        <div class="col-12 mt-5 mt-md-3">
             <h2 class='text-center mb-3'><small>Edit Your Profile</small></h2>
             <hr>
             <div class="profile-container">
