--- a/src/app/messagearea/messagearea.component.html
+++ b/src/app/messagearea/messagearea.component.html
@@ -4,10 +4,10 @@
 <div class="chatbox-holder">
     <div class="chatbox">
       <div class="chatbox-top">
-        <div class="chatbox-avatar">
+        <div class="chatbox-avatar" [style]='{display:group?"none":""}'>
           <a target="_blank" href="https://www.facebook.com/mfreak"><img src="https://gravatar.com/avatar/2449e413ade8b0c72d0a15d153febdeb?s=512&d=https://codepen.io/assets/avatars/user-avatar-512x512-6e240cf350d2f1cc07c2bed234c3a3bb5f1b237023c204c782622e80d6b212ba.png" /></a> 
         </div>
-        <div class="chat-partner-name">
+        <div class="chat-partner-name" [style]='{display:group?"none":""}'>
           <span class="status online"></span>
           <a target="_blank" href="https://www.facebook.com/mfreak"> Mamun Khandakery</a>
         </div>
@@ -19,79 +19,43 @@
       </div>
       
       <div class="chat-messages">
-         <div class="message-box-holder">
-          <div class="message-box">
-            Hello dear
+        <h5 class='text-center mb-2' style='width:100vw;'><small>start messaging...</small></h5>
+
+        <div class="message-box-holder" *ngFor="let message of messageList">
+         
+          <div  *ngIf="message.from_id != getPublicId()">
+               <div class="message-sender">
+                  {{message.details.name}}
+               </div>
+               <div class="message-box message-partner">
+
+                 <i *ngIf="message.details.react.like == 1" class='fa fa-thumbs-up'></i>
+                 {{message.details.message}}
+                 
+               </div>
           </div>
+
+          <div *ngIf="message.from_id == getPublicId()">
+              <div class="message-box">
+
+                <i *ngIf="message.details.react.like == 1" class='fa fa-thumbs-up'></i>
+                {{message.details.message}}
+
+              </div>
+          </div>
+         
         </div>
+
         
-        <div class="message-box-holder">
-          <div class="message-sender">
-            Mamun Khandaker
-           </div>
-          <div class="message-box message-partner">
-            Hi 
-          </div>
-        </div>
         
-        <div class="message-box-holder">
-          <div class="message-box">
-            How are you doing?
-          </div>
-        </div>
-        
-        <div class="message-box-holder">
-          <div class="message-sender">
-             Mamun Khandaker
-           </div>
-          <div class="message-box message-partner">
-            I'm doing fine. How about you?
-          </div>
-        </div>
-        
-        <div class="message-box-holder">
-          <div class="message-box">
-            I am fine.
-          </div>
-        </div>
-        
-        <div class="message-box-holder">
-          <div class="message-box">
-            Do you know why I knocked you today?
-          </div>
-        </div>
-        
-        <div class="message-box-holder">
-          <div class="message-box">
-            There's something important I would like to share with you. Do you have some time?
-          </div>
-        </div>
-        
-        <div class="message-box-holder">
-          <div class="message-sender">
-             Mamun Khandaker
-           </div>
-          <div class="message-box message-partner">
-            Yeah sure. Let's meet in the Einstein cafe this evening and discuss the matter.
-          </div>
-        </div>
-        
-        <div class="message-box-holder">
-          <div class="message-sender">
-             Mamun Khandaker
-           </div>
-          <div class="message-box message-partner">
-            I thought of coming to your place and discuss about it but I had to finish my projects and I didn't have enough time to go out of the house.
-          </div>
-        </div>      
       </div>
       
       <div class="chat-input-holder">
-        <textarea class="chat-input" placeholder="enter message here... "></textarea>
-        <input type="submit" value="Send" class="message-send" />
+        <textarea class="chat-input" [(ngModel)]="createMessage" placeholder="enter message here... "></textarea>
+        <input type="submit" value="Send" class="message-send" (click)="sendMessage()"/>
       </div>
       <div class="attachment-panel">
-        <a href="#" class="fa fa-thumbs-up"></a>
+        <a href="#" class="fa fa-thumbs-up" (click)='sendLike($event)'></a>
         <!--<a href="#" class="fa fa-camera"></a>
         <a href="#" class="fa fa-video-camera"></a>-->
         <a href="#" class="fa fa-image"></a>
