worked on security in messaging, worked on ui of message box, created entry point for group messaging area

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,1 +1,17 @@
-<p>chat works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-12 category-container">
+            <div class="join-group p-2 bg-dark" (click)="goToMessageArea()">
+                 <div class='headers'>
+                     <h3>Join Group</h3>
+                     <div class="arrow">
+                         <i class='fa fa-arrow-right'></i>
+                     </div>
+                </div> 
+                <div class="text">
+                    <p class='bg-secondary'>Join a random group chat </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
