--- a/src/app/messagearea/messagearea.component.css
+++ b/src/app/messagearea/messagearea.component.css
@@ -171,10 +171,11 @@ ul {
 
 .message-box-holder {
   width: 100%;
-  margin: 0 0 15px;
+  padding: 10px 6px;
   display: flex;
   flex-flow: column;
   align-items: flex-end;
+ 
 }
 
 .message-sender {
@@ -198,8 +199,12 @@ ul {
   background: rgba(100, 170, 0, .1);
   border: 2px solid rgba(100, 170, 0, .1);
   color: black;
-  font-size: 14px;
-  box-shadow:0px 1px 10px rgba(25, 85, 28, 0.568);
+  font-size: 18px;
+  letter-spacing: 0px;
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+  box-shadow:2px 2px 5px rgba(0,0,0,0.4);
+  /*box-shadow:0px 1px 10px rgba(25, 85, 28, 0.568);
+  box-shadow:2px 2px 10px black;*/
 }
 
 .message-box:after {
@@ -213,10 +218,14 @@ ul {
 }
 
 .message-partner {
-  background: rgba(0, 114, 135, .1);
-  border: 2px solid rgba(0, 114, 135, .1);
+  /*background: rgba(0, 114, 135, .1);
+  border: 2px solid rgba(0, 114, 135, .1);*/
+  background:whitesmoke;
   align-self: flex-start;
-  box-shadow:0px 1px 10px rgba(36, 97, 93, 0.623);
+  background: whitesmoke;
+ /* box-shadow:0px 1px 10px rgba(36, 97, 93, 0.623);*/
+  box-shadow:2px 2px 6px rgba(0,0,0,0.5);
+  
 }
 
 .message-partner:after {
@@ -225,7 +234,7 @@ ul {
   top: -22px;
   left: 9px;
   border: 10px solid transparent;
-  border-bottom: 10px solid rgba(0, 114, 135, .2);
+ /* border-bottom: 10px solid rgba(0, 114, 135, .2);*/
   border-left: none;
 }
 
@@ -272,7 +281,8 @@ ul {
 }
 
 .attachment-panel {
-  padding: 10px 10px;
+  padding: 5px 15px;
+  font-size:20px;
   text-align: right;
 }
 
