--- a/src/app/secondheader/secondheader.component.css
+++ b/src/app/secondheader/secondheader.component.css
@@ -33,7 +33,7 @@
         transition:2s;
     }
     .second-header ul{
-        margin-top:40px;
+        margin-top:50px;
         flex-direction:column;
     }
     .second-header ul div{
@@ -43,6 +43,10 @@
     .second-header ul div li{
         padding:6px 10px;
         font-size:20px;
+        width:100%;
+    }
+    .second-header ul div li:focus{
+        outline:none;
     }
     .second-header ul div li:hover{
         background:green;
