--- a/src/app/messagearea/messagearea.component.html
+++ b/src/app/messagearea/messagearea.component.html
@@ -40,7 +40,7 @@
                 {{message.details.message}}
 
               </div>
-             <span *ngIf='scrollToBottom()'></span>
+             <span *ngIf='scrollToBottom()'></span><!-- hack to scroll the message area to bottom whenever new message is created or received -->
          
         </div>
 
